# ppd_breach_protocol

./: .gitignore  README.md  ac_test.py  breach_translator.py  install.py  main.py  ppd_breach_protocol_gurobi_model_schema.ipynb  ppd_breach_protocol_main.ipynb  requirements-dev.txt  requirements.txt
breach_solvers/: __init__.py  solver_brute.py  solver_gurobi.py  solvers_abc.py  solvers_getter.py  solvers_protocol.py  test.py
breach_solvers/ant_colony/: solver_ac.py
breach_solvers/brute/: solver_brute.py
breach_solvers/brute/breach_solver_back/: __init__.py  breach_solver.cpp  breach_solver_cpp.pyi  setup.py
breach_solvers/gurobi/: solver_gurobi.py
breach_solvers/solvers/: __init__.py  solver_ac.py  solver_brute.py  solver_gurobi.py  solver_scip.py
breach_solvers/solvers/ant_colony/: solver_ac.py
breach_solvers/solvers/ant_colony/ant_col_back/: ant_colony.cpp
breach_solvers/solvers/brute/: solver_brute.py
breach_solvers/solvers/brute/breach_solver_back/: __init__.py  setup.py  (+2 more)
breach_solvers/solvers/gurobi/: solver_gurobi.py
common/: __init__.py
core/: __init__.py  base_setup.py  solution_verifier.py
core/datastructures/: __init__.py  solution.py  task.py
core/interface/: __init__.py  breach_translator.py  console_interface.py
cpp/: CMakeLists.txt  __init__.py  __init__.pyi  setup.py
cpp/ant_colony_source/: ant_colony.cpp
cpp/breach_solver_source/: breach_solver.cpp
task_generator/: __init__.py  task_factory.py
task_generator/breach_generator/: __init__.py  bp_generator.py  costs_generator.py  demons_generator.py  matrix_generator.py
